# pylynxley

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint  README.md  justfile  pyproject.toml
.github/workflows/: lint-format.yml  publish-pypi.yml  quality-security.yml  tests.yml  typecheck.yml
src/pylynxley/: __init__.py  cli.py  core.py  extradata.py  guid.py  idlist.py  io_binary.py  linkinfo.py  lnk.py  model.py  resolver.py  uwp.py
src/pylynxley/tests/: conftest.py  test_cli.py  test_coverage_100.py  test_local.py  test_network.py  test_uwp.py
