[project]
name = "pylynxley"
version = "2026.04.10.01"
description = "Add your description here"
readme = "README.md"
license = "LGPL-3.0-or-later"
authors = [
    { name = "rbroderi", email = "richard.broderick@gmail.com" }
]
requires-python = ">=3.14"
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "beartype>=0.22.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-sugar>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
venvPath = "."
venv = ".venv"
include = ["src", "src\\pylynxley\\tests"]
pythonVersion = "3.14"
reportUnusedCallResult = "none"
reportAny = "none"
reportExplicitAny = "none"
reportImplicitStringConcatenation = "none"
reportUnusedFunction = "none"
reportMissingParameterType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"

[tool.ruff]
line-length = 120
target-version = "py314"


[tool.ruff.lint.isort]
force-single-line = true

[tool.coverage.run]
omit = ["src/fanic/main.py", "src/pylynxley/tests/*"]

[tool.ty.src]
exclude = ["typings"]
